# ADSLite

./: AdsLiteAPI.cpp  AdsLiteAPI.h  AdsLiteDef.h  CMakeLists.txt  README.md
backend/: AdsFileService.cpp  AdsFileService.h  BackendSelector.cpp  BackendSelector.h  BackendServices.cpp  BackendServices.h  BroadcastDiscovery.cpp  BroadcastDiscovery.h  IAdsBackend.h  NetIdResolver.h  NetworkUtils.cpp  NetworkUtils.h  StandaloneBackend.cpp  StandaloneBackend.h  TargetSystemInfo.cpp  TargetSystemInfo.h  TwinCATBackend.cpp  TwinCATBackend.h
example/: CMakeLists.txt  main.cpp  main_file.cpp
standalone/: AdsLiteLib.cpp  AdsLiteLib.h  AdsNotification.h  AmsAddr.h  AmsConnection.cpp  AmsConnection.h  AmsHeader.h  AmsNetId.h  AmsPort.cpp  AmsPort.h  AmsRouter.cpp  AmsRouter.h  Log.cpp  NetworkUtils.h  RingBuffer.h  Router.h  Sockets.cpp  Sockets.h
